; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm.c___set_size.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm.c___set_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mapped_device = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@SECTOR_SHIFT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mapped_device*, i64)* @__set_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__set_size(%struct.mapped_device* %0, i64 %1) #0 {
  %3 = alloca %struct.mapped_device*, align 8
  %4 = alloca i64, align 8
  store %struct.mapped_device* %0, %struct.mapped_device** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.mapped_device*, %struct.mapped_device** %3, align 8
  %6 = getelementptr inbounds %struct.mapped_device, %struct.mapped_device* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 8
  %8 = load i64, i64* %4, align 8
  %9 = call i32 @set_capacity(i32 %7, i64 %8)
  %10 = load %struct.mapped_device*, %struct.mapped_device** %3, align 8
  %11 = getelementptr inbounds %struct.mapped_device, %struct.mapped_device* %10, i32 0, i32 0
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i64, i64* %4, align 8
  %16 = trunc i64 %15 to i32
  %17 = load i32, i32* @SECTOR_SHIFT, align 4
  %18 = shl i32 %16, %17
  %19 = call i32 @i_size_write(i32 %14, i32 %18)
  ret void
}

declare dso_local i32 @set_capacity(i32, i64) #1

declare dso_local i32 @i_size_write(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
